--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,21 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+
+tokio = ["tokio-runtime"]
+async-std = ["async-std-runtime"]
+smol = ["smol-runtime"]
+
 [dependencies]
+thiserror = "1.0"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Optional dependencies
-tokio = { version = "1.0", features = ["time"], optional = true }
-async-std = { version = "1.0", optional = true }
+tokio-runtime = { package = "tokio", version = "1.0", features = ["time"], optional = true }
+async-std-runtime = { package = "async-std", version = "1.0", optional = true }
+smol-runtime = { package = "smol", version = "1.0", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # Optional dependencies
