--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,16 @@ edition = "2021"
 [features]
 default = []
 
-tokio = ["tokio-runtime"]
-async-std = ["async-std-runtime"]
-smol = ["smol-runtime"]
-
 [dependencies]
 thiserror = "1.0"
+futures-core = "0.3"
+pin-project-lite = "0.2"
+slab = "0.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Optional dependencies
-tokio-runtime = { package = "tokio", version = "1.0", features = ["time"], optional = true }
-async-std-runtime = { package = "async-std", version = "1.0", optional = true }
-smol-runtime = { package = "smol", version = "1.0", optional = true }
+tokio = { version = "1.0", features = ["time"], optional = true }
+futures-timer = { version = "3.0", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # Optional dependencies
