--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [features]
 default = [
     # "tokio",
-    # "futures-timer",
+    # "smol",
     # "wasm-timer",
 ]
 
@@ -21,7 +21,7 @@ slab = "0.4"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Optional dependencies
 tokio = { version = "1.0", features = ["time"], optional = true }
-futures-timer = { version = "3.0", optional = true }
+smol = { version = "1.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 # Optional dependencies
